packages/build/tests/error/utils/fixtures/fail_build/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit({
    utils: {
      error: { failBuild },
    },
  }) {
    failBuild('test')
  },
}
